# dance2mmd

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
data/: sample_motion.json
docs/: GPU_SETUP.md
scripts/: diag_vmd.py  render_mmd.py  run_wham.sh  run_wham_docker.sh  server_setup_wham.sh  server_setup_wham2.sh  server_setup_wham3.sh  server_setup_wham4.sh  server_setup_wham5.sh  wham_to_canonical.py
src/dance2mmd/: __init__.py  cli.py  extract_mediapipe.py  extract_wham.py  motion.py  postprocess.py  quat.py  retarget.py  skeleton.py  synthetic.py  vmd.py
tests/: test_pipeline.py
viewer/: index.html  mmd.html  video.html
